--- a/env.example
+++ b/env.example
@@ -2,3 +2,20 @@ PORT=4000
 MONGODB_URI=mongodb://localhost:27017/express-graphql-demo
 JWT_SECRET=your-super-secret-jwt-key-here
 NODE_ENV=development
+
+# Redis Configuration
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
+# Email Configuration (SMTP)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+SMTP_FROM=your-email@gmail.com
+
+# Application Configuration
+APP_NAME=Express GraphQL Demo
+FRONTEND_URL=http://localhost:3000
