--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "jest"
+    "test": "jest",
+    "test:queue": "node test-queue.js",
+    "test:queue:simple": "node test-queue-simple.js",
+    "worker": "node src/workers/index.js",
+    "worker:dev": "nodemon src/workers/index.js"
   },
   "keywords": [
     "express",
@@ -17,14 +21,18 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/nodemailer": "^7.0.1",
     "apollo-server-express": "^3.12.1",
     "bcryptjs": "^2.4.3",
+    "bull": "^4.16.5",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "nodemailer": "^7.0.6",
+    "redis": "^5.8.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
